# expense_manager_1_0_1

./: README.md  pyproject.toml
migrations/versions/: 319e90770583_added_password_column_in_user_table.py  41b596e265bc_.py
src/: __init__.py
src/API/: api.py
src/auth/: auth.py
src/auth/templates/auth/: forgot-password.html  login.html  register.html
src/dashboard/: dashboard.py
src/dashboard/templates/dashboard/: index.html
src/expenses/: expenses.py
src/expenses/templates/expenses/: expenses.html  modify_expense.html
src/models/: models.py
src/static/js/: chart-area.js  chart-pie.js
src/templates/: 404.html  base.html
